# Amigo-Secreto

./: CMakeLists.txt  main.c
include/: headerEstrutura.h  headerGraficas.h
lib/: funcoesEstrutura.c  funcoesGraficas.c
src/: main.c
